# Synapse-GameEngine

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  ROADMAP.md
.github/workflows/: ci-improved.yml  ci.yml
docs/html/: _application_8cpp.html  _application_8cpp__incl.map  _application_8cpp__incl.md5  _application_8h.html  _application_8h.js  _application_8h__dep__incl.map  _application_8h__dep__incl.md5  _application_8h__incl.map  _application_8h__incl.md5  _application_8h_source.html  _logger_8cpp.html  _logger_8cpp__incl.map  _logger_8cpp__incl.md5  _logger_8h.html  _logger_8h.js  _logger_8h__dep__incl.map  _logger_8h__dep__incl.md5  _logger_8h__incl.map  _logger_8h__incl.md5  _logger_8h_source.html  _synapse_8cpp.html  _synapse_8h.html  _synapse_8h.js  _synapse_8h__dep__incl.map  _synapse_8h__dep__incl.md5  _synapse_8h_source.html  annotated.html  annotated_dup.js  class_i_log_sink-members.html  class_i_log_sink.html  class_i_log_sink.js  class_logger-members.html  class_logger.html  class_synapse_1_1_application-members.html  class_synapse_1_1_application.html  class_synapse_1_1_application.js  class_synapse_1_1_console_sink-members.html  class_synapse_1_1_console_sink.html  class_synapse_1_1_console_sink.js  class_synapse_1_1_console_sink__coll__graph.md5  (+74 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  namespaces_0.js  (+6 more)
docs/latex/: _application_8cpp.tex  _application_8cpp__incl.md5  _application_8h.tex  _application_8h__dep__incl.md5  _application_8h__incl.md5  _application_8h_source.tex  _logger_8cpp.tex  _logger_8cpp__incl.md5  _logger_8h.tex  _logger_8h__dep__incl.md5  _logger_8h__incl.md5  _logger_8h_source.tex  _synapse_8cpp.tex  _synapse_8h.tex  _synapse_8h__dep__incl.md5  _synapse_8h_source.tex  annotated.tex  class_i_log_sink.tex  class_logger.tex  class_synapse_1_1_application.tex  class_synapse_1_1_console_sink.tex  class_synapse_1_1_console_sink__inherit__graph.md5  class_synapse_1_1_engine.tex  class_synapse_1_1_file_sink.tex  class_synapse_1_1_file_sink__coll__graph.md5  class_synapse_1_1_i_log_sink.tex  class_synapse_1_1_i_log_sink__inherit__graph.md5  class_synapse_1_1_logger.tex  dir_2c925bc13636093ba820432fa0e75295.tex  dir_2c925bc13636093ba820432fa0e75295_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_93c38debd7ee291714062f7aa20f05b3.tex  dir_a2f0e5642e47e7ed59fe0f0829eafb5f.tex  dir_a2f0e5642e47e7ed59fe0f0829eafb5f_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.tex  engine_8cpp.tex  engine_8h.tex  engine_8h_source.tex  files.tex  (+6 more)
include/SynapseEngine/: Synapse.h
include/SynapseEngine/Core/: Application.h  Logger.h
include/SynapseEngine/Core/Memory/: FreeListAllocator.h  PoolAllocator.h  StackAllocator.h
scripts/: build.sh  clean.sh  generate_docs.sh  manage.sh  managev2.sh  run_tests.sh
src/Core/: Application.cpp  Logger.cpp
src/Core/Memory/: FreeListAllocator.cpp  PoolAllocator.cpp  StackAllocator.cpp
tests/: test_main.cpp
